--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <p>Hello! My name is Jacob Moore, I am a currently a student at
             Southern New Hampshire University studying for a bachelors degree
-            in computer science. My objective is to graduate and become a software engineer.
+            in computer science. My objective is to graduate and become a software engineer. <br/>
             I have loved coding, computers, and just about everything related to technology since
             I was a little kid and am thrilled that I am going into a career path that I am passionate about.
         </p>
